All works but feign client is broken
